--- a/ex03/style.css
+++ b/ex03/style.css
@@ -1,8 +1,44 @@
 * {
   margin: 0;
   padding: 0;
-  /* background: rgb(137, 197, 211); */
-  font-family: 'Agdasima', sans-serif;
+  font-family: "Agdasima", sans-serif;
+}
+
+.spinner {
+  display: none;
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid rgb(169, 219, 199);
+  border-radius: 50%;
+  /* margin-top: 10%;*/
+  margin-left: 40%; 
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .break {
+    flex-basis: 100%;
+    height: 0;
+  }
+
+  .table {
+    padding-left: 30%;
+  }
 }
 
 div.container {
