feat: trying adjust css

--- a/ex05/calculadora-react/src/Calculadora.css
+++ b/ex05/calculadora-react/src/Calculadora.css
@@ -23,6 +23,14 @@ code {
   padding-bottom: 5em;
 }
 
+.numberButtons {
+  padding: 20px;
+}
+
+.operatorButtons {
+  padding: 20px;
+}
+
 .numberButtons,
 .operatorButtons {
   background-color: #b57fff;
