--- a/ex05/calculadora-react/src/Calculadora.css
+++ b/ex05/calculadora-react/src/Calculadora.css
@@ -1,51 +1,68 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.mainClass {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr;
+  align-content: center;
+  justify-items: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
 }
 
-.Calculadora {
-  font-family: sans-serif;
-  text-align: center;
-  border: 2px solid #000;
-  border-radius: 5px;
-  width: 15rem;
-  margin-left: 50em;
-  margin-top: 10em;
-  padding-bottom: 5em;
+.item {
+  background-color: #7c81ad;
+  color: white;
 }
 
-.numberButtons {
-  padding: 20px;
-}
-
-.operatorButtons {
-  padding: 20px;
-}
-
-.numberButtons,
-.operatorButtons {
-  background-color: #b57fff;
-  color: #ffffff;
+.item,
+.equal-button,
+.simbols,
+.ac-button {
   border: none;
-  cursor: pointer;
-  transition: background-color 0.3s;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 5px;
 }
 
-.numberButtons:hover,
-.operatorButtons:hover {
-  background-color: #9868f5;
+.item:hover {
+  transition: 1s;
+  background-color: #4b527e;
 }
 
-.result {
-  color: #7c51ea;
-  text-align: right;
+.ac-button {
+  grid-column: span 2;
+}
+
+.equal-button,
+.simbols,
+.ac-button {
+  background-color: #e5c3a6;
+  border-radius: 5px;
+}
+
+.equal-button:hover,
+.simbols:hover,
+.ac-button:hover {
+  background-color: #c09d7e;
+  transition: 1s;
+}
+
+.equal-button {
+  grid-column: span 4;
+  font-size: 16px;
+  border-radius: 5px;
+  border: none;
+}
+
+h1 {
+  grid-column: 1;
+  grid-row: 1;
+  text-align: center;
+  color: #2e4374;
 }
