--- a/ex06/calculadora-react/src/styles/Resultado.css
+++ b/ex06/calculadora-react/src/styles/Resultado.css
@@ -1,8 +1,32 @@
-.box {
-  min-width: 19.3%;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  opacity: 0.9;
-  background: #c6dabf;
-  margin-top: 10%;
+@media (min-width: 1917px) {
+  .box {
+    min-width: 18.1%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    opacity: 0.9;
+    background: #c6dabf;
+    margin-top: 10%;
+  }
+}
+
+@media (max-width: 1790px) {
+  .box {
+    min-width: 19.3%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    opacity: 0.9;
+    background: #c6dabf;
+    margin-top: 10%;
+  }
+}
+
+@media (min-width:1000px) and (max-width: 1916px) {
+  .box {
+    min-width: 19.3%;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    opacity: 0.9;
+    background: #c6dabf;
+    margin-top: 10%;
+  }
 }
